Use java 17 features and reduce usage of deprecated methods